# AI-Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.py  build_ios.sh  build_linux.sh  build_osx.sh  cmake_install.cmake  compile_commands.json  detector2d.cpp  detector2d.h  ios.toolchain.cmake  opencv_android_sdk_tree_reference.txt  osx.toolchain.cmake  win.toolchain.cmake
examples/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/detection_2d_example/: CMakeLists.txt  detection_example.cc  detection_example.cpp  detection_example_mobile.cc  detection_example_mobile.cc_deprecated  headband_tracking_example.cc  headband_tracking_example.cc_deprecated
examples/face_geometry_example/: CMakeLists.txt  detector_config.json  face_geometry_example.cc  face_geometry_example.cpp  landmarker_config.json
examples/face_geometry_example_mobile/: CMakeLists.txt  face_geometry_example_mobile.cpp
examples/human_pose_example/: CMakeLists.txt  human_pose_example.cc  human_pose_example.cpp
examples/human_segmentation_example/: CMakeLists.txt  human_segmentation_example.cpp
examples/json_test/: CMakeLists.txt  json_test.cc  json_test.cpp
examples/ocv_dnn_rtm/: CMakeLists.txt  Makefile  cmake_install.cmake  rtm_det.cpp
examples/ocv_dnn_rtm_deprecated/: CMakeLists.txt
examples/ocv_dnn_yolov7/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/ocv_dnn_yolov7_deprecated/: CMakeLists.txt  yolov7_tiny_benchmark.cpp
examples/ort/: CMakeLists.txt  Makefile  cmake_install.cmake  ort_test.cpp
examples/ort/cmake/: onnxruntimeConfig.cmake
include/: BaseONNX.h  detector2d.h  detector2d_family.h  face_model_family.h  human_pose_family.h  human_seg_family.h  multi_stage_face_geometry_3d.h  two_stage_human_pose_extractor_2d.h  utils.h
include/tools/face_geometry/: calculator.h  face_geometry.h  geometry_pipeline.h  procrustes_solver.h
include/tools/nms/: nms.h
model_tools/: add_preprocessor_sentis.py  export_onnx_mmdetection.md  onnx_remove_nms.py  symbolic_shape_infer.py
src/: BaseONNX.cc  BaseONNX.cpp  CMakeLists.txt  Makefile  cmake_install.cmake  detector2d.cpp  detector2d_family.cc  detector2d_family.cpp  face_model_family.cc  face_model_family.cpp  human_pose_family.cc  human_pose_family.cpp  human_seg_family.cc  human_seg_family.cpp  multi_stage_face_geometry_3d.cc  two_stage_human_pose_extractor_2d.cc  utils.cpp
src_unity_api/: CMakeLists.txt  unity_api.cc  unity_api.h
src_wasm_api/: CMakeLists.txt  wasm_api.cc  wasm_api.h
tools/: CMakeLists.txt  Makefile  cmake_install.cmake
tools/6d_tracking/: CMakeLists.txt
tools/6d_tracking/csrt3d/: csrt3d.cc  csrt3d.h  unity_api.cc
tools/6d_tracking/csrt3d/example/: run_on_webcam.cc
tools/6d_tracking/include/srt3d/: model.h  region_modality.h  tracker.h
tools/6d_tracking/pysrt3d/: pysrt3d.cpp
tools/6d_tracking/src/: body.cpp  model.cpp  normal_viewer.cpp  region_modality.cpp  renderer_geometry.cpp  tracker.cpp
tools/face_geometry/: CMakeLists.txt  calculator.cc  calculator.cpp  face_geometry.cpp  geometry_pipeline.cc  geometry_pipeline.cpp  geometry_pipeline_metadata_including_iris_landmarks.pbtxt  procrustes_solver.cc  procrustes_solver.cpp
tools/nms/: CMakeLists.txt  Makefile  cmake_install.cmake  nms.cc  nms.cpp
