# add_subdirectory(ocv_dnn_rtm)
# add_subdirectory(ocv_dnn_yolov7)
add_subdirectory(ort)
add_subdirectory(json_test)
add_subdirectory(face_geometry_example)
# add_subdirectory(face_geometry_example_mobile)
# add_subdirectory(human_segmentation_example)
# add_subdirectory(human_pose_example)
add_subdirectory(detection_2d_example)
